--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 
   <link rel="stylesheet" href="css/stiles.css">
 
-</head>
-
-<body>
-
-  <br>
-  <table cellspacing="20">
-    <tr>
-      <td>  <img src="images/andrea.png" alt="Andrea è un maiale"></td>
+</hehead>2
+<bod3head>2
+<bod4  <table cellspacinghead>2
+<bod5   <head>2
+<bod6      <td>  <img src="images/andrea.png" alt="Andrea è un maiale"></td>
       <td>
         <h1 class="titolo">Andrea Lacava</h1>
         <p class="sottotitolo"><em>Studente e Sistemista Applicativo</em></p>
@@ -27,12 +24,12 @@
   <hr>
   <h3>Competenze Lavorative</h3>
   <ul>
-    <li>Linux</li>
-    <li>Openshift</li>
-    <li>Prodotti Axway</li>
-    <li>DB SQL</li>
-    <li>DB NOSQL</li>
-    <li>LDAP</li>
+    <li>Competenza 1</li>
+    <li>Competenza 2</li>
+    <li>Competenza 3</li>
+    <li>Competenza 4</li>
+    <li>Competenza 5</li>
+    <li>Competenza 6</li>
   </ul>
   <h3>Esperienze Lavorative</h3>
   <table cellspacing="10px">
@@ -44,11 +41,11 @@
     </thead>
     <tbody>
       <tr>
-        <td>SCR - Service Control Room (Poste Italiane)</td>
+        <td>Lavoro 1</td>
         <td>2016 - 2020</td>
       </tr>
       <tr>
-        <td>Presidio Applicativo (Poste Italiane)</td>
+        <td>Lavoro 2</td>
         <td>2020 - Today</td>
       </tr>
     </tbody>
