--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
 
   <link rel="stylesheet" href="css/stiles.css">
 
-</hehead>2
-<bod3head>2
-<bod4  <table cellspacinghead>2
-<bod5   <head>2
-<bod6      <td>  <img src="images/andrea.png" alt="Andrea è un maiale"></td>
-      <td>
+</head>
+<body>
+<table cellspacinghead>
+    <tr>
+      <td>  <img src="images/andrea.png" alt="Andrea è un maiale"></td>
+      <td> 
         <h1 class="titolo">Andrea Lacava</h1>
         <p class="sottotitolo"><em>Studente e Sistemista Applicativo</em></p>
         <p>Sono uno studente di informatica a <a href="https://www.google.it">Tor Vergata</a> e lavoro come applicativo a <a href="https://www.posteitaliane.it">poste italiane</a></p>
-
       </td>
     </tr>
   </table>
